--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,4 +53,8 @@ dependencies {
     annotationProcessor "androidx.room:room-compiler:$room_version"
     implementation "androidx.room:room-ktx:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
+
+    def livedata_version = "2.2.0-alpha02"
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:$livedata_version"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$livedata_version"
 }
