--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,7 +54,6 @@ dependencies {
     implementation "androidx.room:room-ktx:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
 
-    def livedata_version = "2.2.0-alpha02"
-    implementation "androidx.lifecycle:lifecycle-runtime-ktx:$livedata_version"
-    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$livedata_version"
+    //ViewModel
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1'
 }
