Adding fragments to the project.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,14 +8,13 @@
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:name=".MainApplication"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:name=".MainApplication"
         android:theme="@style/Theme.TodoList"
         tools:targetApi="31">
         <activity
-            android:name=".EditTodoActivity"
+            android:name=".CreateOrEditTodoActivity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
